argocd/ingress/argocd-grpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  # check the pod with the ingress controller and look for --ingress-class=<classname>, in v20 it's 'public'
  ingressClassName: public
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
    host: argocd-grpc.h0.local.test
  tls:
  - hosts:
    - argocd-grpc.h0.local.test
    secretName: argocd-ingress-grpc
